updating scheduler with new questions and rating spreadsheets for everyone

--- a/conflict_reddit_data/convokit_data_downloader.ipynb
+++ b/conflict_reddit_data/convokit_data_downloader.ipynb
@@ -699,6 +699,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Remove content marked as [deleted]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_awry = df_awry[df_awry['message'] != '[deleted]']\n",
+    "df_winning_conversations = df_winning_conversations[df_winning_conversations['message'] != '[deleted]']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Output: `df_winning_conversations` and `df_awry`\n",
     "At this point, we output the two datasets, which have a shared set of columns:\n",
     "- `CONV_ID`: the conversation ID (unique identifier per conversation thread)\n",
