update labelling log and generate summaries of disagreements

--- a/explore_disagreements.ipynb
+++ b/explore_disagreements.ipynb
@@ -11,10 +11,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rating_log = pd.read_csv(\"CONFLICT_CONVO_LABELING_LOG.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OI_expression = pd.read_csv(\"./disagreed_messages/OI_expression.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OI_expression_disagreements = OI_expression.merge(rating_log, on = \"id\", how = \"left\")[[\"id\", \"text\", \"rating_OI_expression\", \"rater_id\"]]\n",
+    "OI_expression_disagreements.to_csv('./disagreed_messages/OI_expression_2-16-24.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directness_expression = pd.read_csv(\"./disagreed_messages/directness_expression.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directness_expression_disagreements = directness_expression.merge(rating_log, on = \"id\", how = \"left\")[[\"id\", \"text\", \"rating_directness_expression\", \"rater_id\"]]\n",
+    "directness_expression_disagreements.to_csv('./disagreed_messages/directness_expression_2-16-24.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directness_content = pd.read_csv(\"./disagreed_messages/directness_content.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directness_content_disagreements = directness_content.merge(rating_log, on = \"id\", how = \"left\")[[\"id\", \"text\", \"rating_directness_content\", \"rater_id\"]]\n",
+    "directness_content_disagreements.to_csv('./disagreed_messages/directness_content_2-16-24.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OI_content = pd.read_csv(\"./disagreed_messages/OI_content.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OI_content_disagreements = directness_content.merge(rating_log, on = \"id\", how = \"left\")[[\"id\", \"text\", \"rating_OI_content\", \"rater_id\"]]\n",
+    "OI_content_disagreements.to_csv('./disagreed_messages/OI_content_2-16-24.csv')"
+   ]
   }
  ],
  "metadata": {
