update convo rating log

--- a/explore_disagreements.ipynb
+++ b/explore_disagreements.ipynb
@@ -20,6 +20,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "winning = pd.read_csv('./conflict_reddit_data/full_data/winning_conversations.csv')\n",
+    "awry = pd.read_csv('./conflict_reddit_data/full_data/conversations_gone_awry.csv')\n",
+    "\n",
+    "rated_convs = rating_log[\"CONV_ID\"].unique()\n",
+    "\n",
+    "convs_from_winning = set(rated_convs).intersection(set(winning[\"CONV_ID\"]))\n",
+    "convs_from_awry = set(rated_convs).intersection(set(awry[\"CONV_ID\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(convs_from_winning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(convs_from_awry)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
